# learn_opencl

./: CMakeLists.txt  README.md
frist_test/: main.cpp  vecAdd.cl
